Remove zgc, performance seems worse