@@ -14,4 +14,4 @@ WORKDIR /app
 COPY --from=builder /app/build/libs/Stickerify-shadow.jar .
 COPY --from=mwader/static-ffmpeg:6.0 /ffmpeg /usr/local/bin/
 ENV FFMPEG_PATH=/usr/local/bin/ffmpeg
-CMD ["java", "-XX:+UseZGC", "-XX:+ZGenerational", "-jar", "Stickerify-shadow.jar"]
+CMD ["java", "-jar", "Stickerify-shadow.jar"]
