@@ -46,12 +46,10 @@ tasks.withType(JavaCompile).configureEach {
 
 test {
     useJUnitPlatform()
-    jvmArgs = ['-XX:+UseZGC', '-XX:+ZGenerational']
 }
 
 application {
     mainClass = 'com.github.stickerifier.stickerify.runner.Main'
-    applicationDefaultJvmArgs = ['-XX:+UseZGC', '-XX:+ZGenerational']
 }
 
 shadowJar {
